@@ -1,3 +1,9 @@
+2008-09-30 Alexander Malysh <amalysh at kannel.org>
+    * contrib/kannel-monitor/index.php: applied patch that adds inbound/outbound load and
+      version info.
+      Thanks to Vincent CHAVANIS <v.chavanis_at_telemaque.fr> for this patch.
+      [Msg-ID: <48DA51D6.9010209@telemaque.fr>]
+
 2008-09-21 Alexander Malysh <amalysh at kannel.org>
     * gw/bb_smscconn.c, gw/bearerbox.c, gw/load.c, gw/load.h:
       added simple bandwidth meter with heuristic and needed changes to bearerbox status.
